--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Sync files to hosting
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with: 
-          server: ftp.enterflash.com
-          username: testcicd@enterflash.com
+          server: ftp.cluster028.hosting.ovh.net
+          username: ftsomuf
           password: ${{ secrets.ftp_password }}
